--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <title>Hosting</title>
 	
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
+	
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 
@@ -12,11 +14,11 @@
 <body>
 	
 	<header>
-		<div class="wrapper">
-			<h1><img src="#" alt="Hosting Logo">Hosting</h1>
+		<div class="wrapper row">
+			<h1><img src="img/logo-hosting.jpg" alt="Hosting Logo"></h1>
 			<nav>
 				<ul>
-					<li>Support:<a href="#">info@webhosting.com</a></li>
+					<li>Support: <a href="#">info@webhosting.com</a></li>
 					<li><a href="#">Register</a></li>
 					<li><a href="#">Login</a></li>
 				</ul>
@@ -38,18 +40,18 @@
 			</ul>
 		</nav>
 		
-		<div><!--Place image for bg-->
+		<div id="hero"><!--Place image for bg-->
 			<div class="wrapper">
-				<p>Awesome Hosting<br>With Unlimited Features</p>
+				<p>Awesome Hosting<br><span>With Unlimited Features</span></p>
 			</div>
 		</div>
 	</header>
 	
-	<section><!--add bg color-->
+	<section id="domain"><!--add bg color-->
 		<div class="wrapper row">
 			<header>
 				<img src="#" alt="">
-				<h2>Search Your<br>Domain</h2>
+				<h2>Search Your<br><b>Domain</b></h2>
 			</header>
 			
 			<form>
@@ -75,69 +77,69 @@
 	
 	<section class="wrapper">
 		<header>
-			<h2>Our<br>Benefits</h2>
+			<h2>Our<br><b>Benefits</b></h2>
 		</header>
 		
 		<div class="row">
-			<section class="row">
+			<section class="row col-1-3">
 				<img src="#" alt="">
 				<div>
 					<header>
-						<h3>99.9&#37;</h3>
+						<h3>99.9&#37; Uptime</h3>
 					</header>
-					<p></p>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 				</div>
 			</section>
 			
-			<section class="row">
+			<section class="row col-1-3">
 				<img src="#" alt="">
 				<div>
 					<header>
-						<h3></h3>
+						<h3>24/7/365 Support</h3>
 					</header>
-					<p></p>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 				</div>
 			</section>
 			
-			<section class="row">
+			<section class="row col-1-3">
 				<img src="#" alt="">
 				<div>
 					<header>
-						<h3></h3>
+						<h3>Protect Your PC</h3>
 					</header>
-					<p></p>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 				</div>
 			</section>
 		</div>
 		
 		<div class="row">
-			<section class="row">
+			<section class="row col-1-3">
 				<img src="#" alt="">
 				<div>
 					<header>
-						<h3></h3>
+						<h3>DNS Control</h3>
 					</header>
-					<p></p>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 				</div>
 			</section>
 			
-			<section class="row">
+			<section class="row col-1-3">
 				<img src="#" alt="">
 				<div>
 					<header>
-						<h3></h3>
+						<h3>Domain Transfer</h3>
 					</header>
-					<p></p>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 				</div>
 			</section>
 			
-			<section class="row">
+			<section class="row col-1-3">
 				<img src="#" alt="">
 				<div>
 					<header>
-						<h3></h3>
+						<h3>100&#37; Security</h3>
 					</header>
-					<p></p>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 				</div>
 			</section>
 		</div>
@@ -147,7 +149,7 @@
 		<div class="wrapper row">
           <section>
               <header>
-                  <h2>Now<br>What Is Hot</h2>
+                  <h2>Now<br><b>What Is Hot</b></h2>
               </header>
 
               <div>
@@ -155,9 +157,9 @@
               </div>
           </section>
 
-          <section>
+          <section id="features">
               <header>
-                  <h2>Our<br>Features</h2>
+                  <h2>Our<br><b>Features</b></h2>
               </header>
 			  
 			  <div class="row">
@@ -185,9 +187,9 @@
 		</div>
 	</div>
 	
-	<section class="wrapper">
+	<section id="hosting" class="wrapper">
 		<header>
-			<h2>Our<br>Hosting</h2>
+			<h2>Our<br><b>Hosting</b></h2>
 		</header>
 		
 		<table>
