--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
 <body>
 	
 	 <header>
+		 <div id="dk-blue-bg">
+			<div class="col-lg-4">
+				<p>65/A, 17th floor, Kings land, New York</p>
+			</div>
+			
+			<div class="col-lg-4">
+				<p>info@consulting.com</p>
+			</div>
+			
+			<div class="col-lg-4">
+				<ul>
+					<li><a href="https://www.facebook.com/" target="_blank"><span>Facebook</span></a></li>
+					<li><a href="https://www.twitter.com/" target="_blank"><span>Twitter</span></a></li>
+					<li><a href="https://www.linkedin.com/" target="_blank"><span>LinkedIn</span></a></li>
+					<li><a href="https://www.pinterest.com/" target="_blank"><span>Pinterest</span></a></li>
+				</ul>
+			</div>
+		</div>
+		 
     	<div class="wrapper">
 			<div class="row">
             	<h1>Buson.</h1>
@@ -26,18 +45,18 @@
 						<li><a href="#pages">Pages</a></li>
                 	</ul>
             	</nav>
-				<a href="#contact">Contact Now</a>
+				<p><a href="#contact">Contact Now</a></p>
 		 	</div>
+		 </div>
 		 
-			<div class="row hero">
-				<p>Welcome to Buson</p>
-				<p>We help you to grow your business</p>
-				<a href="#about">Learn More</a>
-			</div>
+		<div class="row hero">
+			<p>Welcome to Buson</p>
+			<p>We help you to grow your business</p>
+			<p><a href="#about">Learn More</a></p>
 		</div>
     </header>
 	
-	<section id="about">
+	<div id="about">
 		<div class="wrapper row">
 			<section class="col-sm-12 col-md-6 col-lg-4">
 				<header>
@@ -61,19 +80,19 @@
 					<h2>What We Do For You</h2>
 				</header>
 				<p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
-				<a href="#services">Learn More</a>
+				<p><a href="#services">Learn More</a></p>
 			</section>
-			
-			<section class="col-sm-12">
-				<img src="img/" alt=" ">
-				<header>
-					<h2>We are trusted by more than 5000 clients</h2>
-				</header>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-				<a href="#cases">Learn More</a>
-			</section>
-		</div>
-	</section>
+		</div>	
+		
+		<section class="wrapper row">
+			<img src="img/" alt=" ">
+			<header>
+				<h2>We are trusted by more than 5000 clients</h2>
+			</header>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+			<p><a href="#cases">Learn More</a></p>
+		</section>
+	</div>
 	
 	<section id="services" class="wrapper">
 		<header>
@@ -83,7 +102,7 @@
 			<section class="col-sm-12 col-md-6 col-lg-4">
 				<header>
 					<img src="img/" alt=" ">
-					<h2>Strategic Planning</h2>
+					<h3>Strategic Planning</h3>
 				</header>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
 			</section>
@@ -91,7 +110,7 @@
 			<section class="col-sm-12 col-md-6 col-lg-4">
 				<header>
 					<img src="img/" alt=" ">
-					<h2>Trades &amp; Stocks</h2>
+					<h3>Trades &amp; Stocks</h3>
 				</header>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
 			</section>
@@ -99,28 +118,36 @@
 			<section class="col-sm-12 col-lg-4">
 				<header>
 					<img src="img/" alt=" ">
-					<h2>Audit &amp; Assurance</h2>
+					<h3>Audit &amp; Assurance</h3>
 				</header>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
 			</section>
-			<a href="#">More Services</a>
+		</div>
+		<p><a href="#">More Services</a></p>
+	</section>
+	
+	<section id="cases" class="lt-blue-bg">
+		<div class="wrapper row">
+			<div class="col-lg-6">
+				<header>
+					<h2>Completed Cases</h2>
+				</header>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p><a href="#">See More</a></p>
+			</div>
+			<div class="col-lg-6">
+				<img src="img/" alt=" ">
+			</div>
 		</div>
 	</section>
 	
-	<section id="cases" class="wrapper">
-		<header>
-			<h2>Completed Cases</h2>
-		</header>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-		<a href="#">See More</a>
+	<section id="blog" class="wrapper">
 		<blockquote>
 			<img src="img/" alt="">
 			<p>You can't succeed if you just do what others do and follow the well-worn path. You need to create a new and original path for yourself.</p>
-			<footer>Clifford Frazier &mdash; Colorlib Themes</footer>
+			<footer><p>Clifford Frazier &mdash; Colorlib Themes</p></footer>
 		</blockquote>
-	</section>
-	
-	<section id="blog" class="wrapper">
+		
 		<header>
 			<h2>Our Recent News</h2>
 		</header>
@@ -128,7 +155,7 @@
 			<section class="col-sm-12 col-md-6 col-lg-4">
 				<header>
 					<img src="img/" alt=" ">
-					<h3>Business planning</h3>
+					<p>Business planning</p>
 				</header>
 				<h2>Amazing Places to Visit in Summer</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
@@ -137,7 +164,7 @@
 			<section class="col-sm-12 col-md-6 col-lg-4">
 				<header>
 					<img src="img/" alt=" ">
-					<h3>Audit</h3>
+					<p>Audit</p>
 				</header>
 				<h2>Amazing Places to Visit in Summer</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
@@ -146,7 +173,7 @@
 			<section class="col-sm-12 col-lg-4">
 				<header>
 					<img src="img/" alt=" ">
-					<h3>Business Planning</h3>
+					<p>Business Planning</p>
 				</header>
 				<h2>Amazing Places to Visit in Summer</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
@@ -168,7 +195,7 @@
 				</ul>
 			</div>
 			
-			<div class="col-sm-6 col-lg-3">
+			<section class="col-sm-6 col-lg-3">
 				<h4>Company</h4>
 				<ul>
 					<li><a href="#">Home</a></li>
@@ -177,9 +204,9 @@
 					<li><a href="#cases">Cases</a></li>
 					<li><a href="#pages">Contact Us</a></li>
 				</ul>
-			</div>
+			</section>
 			
-			<div class="col-sm-6 col-lg-3">
+			<nav class="col-sm-6 col-lg-3">
 				<h4>Services</h4>
 				<ul>
 					<li><a href="#">Commercial Cleaning</a></li>
@@ -188,16 +215,19 @@
 					<li><a href="#">Floor Cleaning</a></li>
 					<li><a href="#">Apartment Cleaning</a></li>
 				</ul>
-			</div>
+			</nav>
 			
-			<div class="col-sm-6 col-lg-3">
+			<address class="col-sm-6 col-lg-3">
 				<h4>Get In Touch</h4>
 				<ul>
-					<li><a href="tel:1525156565">(152) 515-6565</a></li>
+					<li><a href="tel:+11525156565">(152)515-6565</a></li>
                     <li><a href="mailto:demomail@gmail.com">Demomail@gmail.com</a></li>
                     <li>New Orleans, USA</li>
 				</ul>
-			</div>
+			</address>
+		</div>
+		<div class="wrapper row">
+			<p>Copyright &copy;2020 All rights reserved &#124; This template made with &hearts; by ColorLib</p>
 		</div>
 	</footer>
   
