CSS/HTML Added and Revised
Added CSS styles for text and buttons. HTML revised with prior feedback.

--- a/index.html
+++ b/index.html
@@ -13,28 +13,31 @@
 <body>
 	
 	 <header>
-		 <div id="dk-blue-bg">
-			<div class="col-lg-4">
-				<p>65/A, 17th floor, Kings land, New York</p>
-			</div>
+		 <div id="dk-blue-bg" class= "row">
+			<div class="wrapper">
+				<div class="col-lg-4">
+					<p class="txt-white">65/A, 17th floor, Kings land, New York</p>
+				</div>
 			
-			<div class="col-lg-4">
-				<p>info@consulting.com</p>
-			</div>
+				<div class="col-lg-4">
+					<p><a href="mailto:info@consulting.com" class="txt-white">info@consulting.com</a></p>
+				</div>
 			
-			<div class="col-lg-4">
-				<ul>
-					<li><a href="https://www.facebook.com/" target="_blank"><span>Facebook</span></a></li>
-					<li><a href="https://www.twitter.com/" target="_blank"><span>Twitter</span></a></li>
-					<li><a href="https://www.linkedin.com/" target="_blank"><span>LinkedIn</span></a></li>
-					<li><a href="https://www.pinterest.com/" target="_blank"><span>Pinterest</span></a></li>
-				</ul>
+				<div class="col-lg-4">
+					<ul class="social">
+						<li><a href="https://www.linkedin.com/" target="_blank"><span>LinkedIn</span></a></li>
+						<li><a href="https://www.twitter.com/" target="_blank"><span>Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/" target="_blank"><span>Facebook</span></a></li>
+						<li><a href="https://www.google.com/" target="_blank"><span>Google+</span></a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		 
     	<div class="wrapper">
 			<div class="row">
             	<h1>Buson.</h1>
+				
             	<nav>
                 	<ul>
                     	<li><a href="#">Home</a></li>
@@ -45,14 +48,17 @@
 						<li><a href="#pages">Pages</a></li>
                 	</ul>
             	</nav>
-				<p><a href="#contact">Contact Now</a></p>
+				
+				<p><a href="#contact" class="btn btn-red">Contact Now</a></p>
 		 	</div>
 		 </div>
 		 
-		<div class="row hero">
-			<p>Welcome to Buson</p>
-			<p>We help you to grow your business</p>
-			<p><a href="#about">Learn More</a></p>
+		<div id="hero" class="row">
+			<div class="wrapper">
+				<p class="txt-red">Welcome to Buson</p>
+				<p>We help you <br> to grow your <br> business</p>
+				<p><a href="#about" class="btn btn-red">Learn More</a></p>
+			</div>
 		</div>
     </header>
 	
@@ -123,7 +129,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
 			</section>
 		</div>
-		<p><a href="#">More Services</a></p>
+		<p><a href="#" class="btn btn-ghost">More Services</a></p>
 	</section>
 	
 	<section id="cases" class="lt-blue-bg">
@@ -133,7 +139,7 @@
 					<h2>Completed Cases</h2>
 				</header>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-				<p><a href="#">See More</a></p>
+				<p><a href="#" class="btn btn-ghost">See More</a></p>
 			</div>
 			<div class="col-lg-6">
 				<img src="img/" alt=" ">
@@ -152,32 +158,32 @@
 			<h2>Our Recent News</h2>
 		</header>
 		<div class="row">
-			<section class="col-sm-12 col-md-6 col-lg-4">
+			<article class="col-sm-12 col-md-6 col-lg-4">
 				<header>
 					<img src="img/" alt=" ">
 					<p>Business planning</p>
 				</header>
 				<h2>Amazing Places to Visit in Summer</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-			</section>
+			</article>
 			
-			<section class="col-sm-12 col-md-6 col-lg-4">
+			<article class="col-sm-12 col-md-6 col-lg-4">
 				<header>
 					<img src="img/" alt=" ">
 					<p>Audit</p>
 				</header>
 				<h2>Amazing Places to Visit in Summer</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-			</section>
+			</article>
 			
-			<section class="col-sm-12 col-lg-4">
+			<article class="col-sm-12 col-lg-4">
 				<header>
 					<img src="img/" alt=" ">
 					<p>Business Planning</p>
 				</header>
 				<h2>Amazing Places to Visit in Summer</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-			</section>
+			</article>
 			<a href="#">More Services</a>
 		</div>
 	</section>
@@ -187,7 +193,7 @@
 			<div class="col-sm-12 col-lg-3">
 				<h4><img src="img/" alt=" "></h4>
 				<p>eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-				<ul>
+				<ul class="social">
 					<li><a href="https://www.facebook.com/" target="_blank"><span>Facebook</span></a></li>
 					<li><a href="https://www.twitter.com/" target="_blank"><span>Twitter</span></a></li>
 					<li><a href="https://www.linkedin.com/" target="_blank"><span>LinkedIn</span></a></li>
