--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
 	
 	 <header>
-		 <div id="dk-blue-bg" class= "row">
-			<div class="wrapper">
+		 <div id="dk-blue-bg">
+			<div class="wrapper row txt-white">
 				<div class="col-lg-4">
-					<p class="txt-white">65/A, 17th floor, Kings land, New York</p>
+					<p>65/A, 17th floor, Kings land, New York</p>
 				</div>
 			
 				<div class="col-lg-4">
-					<p><a href="mailto:info@consulting.com" class="txt-white">info@consulting.com</a></p>
+					<p><a href="mailto:info@consulting.com">info@consulting.com</a></p>
 				</div>
 			
 				<div class="col-lg-4">
@@ -36,7 +36,9 @@
 		 
     	<div class="wrapper">
 			<div class="row">
-            	<h1>Buson.</h1>
+				<div>
+            		<h1>Buson.</h1>
+				</div>
 				
             	<nav>
                 	<ul>
@@ -49,15 +51,19 @@
                 	</ul>
             	</nav>
 				
-				<p><a href="#contact" class="btn btn-red">Contact Now</a></p>
+				<div>
+					<p><a href="#contact" class="btn btn-red">Contact Now</a></p>
+				</div>
 		 	</div>
 		 </div>
 		 
-		<div id="hero" class="row">
-			<div class="wrapper">
-				<p class="txt-red">Welcome to Buson</p>
-				<p>We help you <br> to grow your <br> business</p>
-				<p><a href="#about" class="btn btn-red">Learn More</a></p>
+		<div id="hero">
+			<div class="wrapper row">
+				<div class="col-lg-4">
+					<p class="txt-red">Welcome to Buson</p>
+					<p>We help you to grow your business</p>
+					<p><a href="#about" class="btn btn-red">Learn More</a></p>
+				</div>
 			</div>
 		</div>
     </header>
@@ -89,14 +95,17 @@
 				<p><a href="#services">Learn More</a></p>
 			</section>
 		</div>	
+	</div>
 		
+	<div>
 		<section class="wrapper row">
-			<img src="img/" alt=" ">
-			<header>
-				<h2>We are trusted by more than 5000 clients</h2>
-			</header>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-			<p><a href="#cases">Learn More</a></p>
+			<div>
+				<header>
+					<h2>We are trusted by more than 5000 clients</h2>
+				</header>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+				<p><a href="#cases">Learn More</a></p>
+			</div>
 		</section>
 	</div>
 	
@@ -147,13 +156,17 @@
 		</div>
 	</section>
 	
+	<section class="wrapper">
+		<div>
+			<blockquote>
+				<img src="img/" alt="">
+				<p>You can't succeed if you just do what others do and follow the well-worn path. You need to create a new and original path for yourself.</p>
+				<footer><p>Clifford Frazier &mdash; Colorlib Themes</p></footer>
+			</blockquote>
+		</div>
+	</section>
+	
 	<section id="blog" class="wrapper">
-		<blockquote>
-			<img src="img/" alt="">
-			<p>You can't succeed if you just do what others do and follow the well-worn path. You need to create a new and original path for yourself.</p>
-			<footer><p>Clifford Frazier &mdash; Colorlib Themes</p></footer>
-		</blockquote>
-		
 		<header>
 			<h2>Our Recent News</h2>
 		</header>
@@ -161,9 +174,9 @@
 			<article class="col-sm-12 col-md-6 col-lg-4">
 				<header>
 					<img src="img/" alt=" ">
-					<p>Business planning</p>
+					<p>Business Planning</p>
+					<h3>Amazing Places to Visit in Summer</h3>
 				</header>
-				<h2>Amazing Places to Visit in Summer</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
 			</article>
 			
@@ -171,8 +184,8 @@
 				<header>
 					<img src="img/" alt=" ">
 					<p>Audit</p>
+					<h3>Amazing Places to Visit in Summer</h3>
 				</header>
-				<h2>Amazing Places to Visit in Summer</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
 			</article>
 			
@@ -180,17 +193,17 @@
 				<header>
 					<img src="img/" alt=" ">
 					<p>Business Planning</p>
+					<h3>Amazing Places to Visit in Summer</h3>
 				</header>
-				<h2>Amazing Places to Visit in Summer</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
 			</article>
-			<a href="#">More Services</a>
+			<p><a href="#">More Services</a></p>
 		</div>
 	</section>
 	
 	<footer id="pages">
 		<div class="wrapper row">
-			<div class="col-sm-12 col-lg-3">
+			<section class="col-sm-12 col-lg-3">
 				<h4><img src="img/" alt=" "></h4>
 				<p>eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				<ul class="social">
@@ -199,20 +212,22 @@
 					<li><a href="https://www.linkedin.com/" target="_blank"><span>LinkedIn</span></a></li>
 					<li><a href="https://www.pinterest.com/" target="_blank"><span>Pinterest</span></a></li>
 				</ul>
-			</div>
+			</section>
 			
 			<section class="col-sm-6 col-lg-3">
 				<h4>Company</h4>
-				<ul>
-					<li><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-					<li><a href="#cases">Cases</a></li>
-					<li><a href="#pages">Contact Us</a></li>
-				</ul>
+				<nav>
+					<ul>
+						<li><a href="#">Home</a></li>
+                    	<li><a href="#about">About</a></li>
+                    	<li><a href="#services">Services</a></li>
+						<li><a href="#cases">Cases</a></li>
+						<li><a href="#pages">Contact Us</a></li>
+					</ul>
+				</nav>
 			</section>
 			
-			<nav class="col-sm-6 col-lg-3">
+			<section class="col-sm-6 col-lg-3">
 				<h4>Services</h4>
 				<ul>
 					<li><a href="#">Commercial Cleaning</a></li>
@@ -221,23 +236,26 @@
 					<li><a href="#">Floor Cleaning</a></li>
 					<li><a href="#">Apartment Cleaning</a></li>
 				</ul>
-			</nav>
+			</section>
 			
-			<address class="col-sm-6 col-lg-3">
+			<section class="col-sm-6 col-lg-3">
 				<h4>Get In Touch</h4>
-				<ul>
-					<li><a href="tel:+11525156565">(152)515-6565</a></li>
-                    <li><a href="mailto:demomail@gmail.com">Demomail@gmail.com</a></li>
-                    <li>New Orleans, USA</li>
-				</ul>
-			</address>
+				<address>
+					<ul>
+						<li><a href="tel:+11525156565">(152)515-6565</a></li>
+                    	<li><a href="mailto:demomail@gmail.com">Demomail@gmail.com</a></li>
+                    	<li>New Orleans, USA</li>
+					</ul>
+				</address>
+			</section>
 		</div>
-		<div class="wrapper row">
+		<div class="row">
 			<p>Copyright &copy;2020 All rights reserved &#124; This template made with &hearts; by ColorLib</p>
 		</div>
 	</footer>
   
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
 <script src="js/functions.js"></script>
+<script src="js/smooth-scroll.js"></script>
 </body>
 </html>
